--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,13 +1,25 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  font-size: 32px;
+  font-weight:900;
   height: 72px;
   background: darkmagenta;
   color: white;
+}
+
+.body {
+  flex: 1;
+  display: flex;
 }
 
 .footer {
@@ -31,4 +43,20 @@ body {
   padding: 32px;
   display: flex;
   flex-wrap: wrap;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.li {
+  padding: 16px;
+}
+
+a {
+  color:white;
+  text-decoration: none;
+  font-size: 24px;
 }
