--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .icon {
-  flex-shrink: 0;
+  flex-shrink: 0; /*prevents crushing*/
   color: royalblue;
   font-size: 26px;
   font-weight: 700;
