--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,12 +11,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  gap: 52px;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -30,4 +25,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+
+  
+
+.info {
+  max-width: 200px;
 }
